<resources>
    <string name="app_name">SomaTelas</string>
    <string name="enviar">Enviar</string>
    <string name="resultado">Resultado:</string>
    <string name="n_mero_2">Número 2:</string>
    <string name="n_mero_1">Número 1:</string>
    <string name="digite_o_primeiro_n_mero">Digite o primeiro número</string>
    <string name="digite_o_segundo_n_mero">Digite o segundo número</string>
    <string name="voltar">Voltar</string>
    <string name="formata_o">Formatação</string>
</resources>
